# pharma

./: .gitignore  DEPLOY.md  Dockerfile  Procfile  README.md  nixpacks.toml  pyproject.toml  render.yaml  requirements-agent.txt  requirements-vercel.txt  requirements.txt  vercel.json
api/: index.py
data/: Claim Drug Code List.xlsx  db.json  mock.py  pharma.json
pinecone/: pinecone_query.py  pinecone_upsert.py
playground/: server.py
playground/static/: index.html
scripts/: generate_token.py
src/: agent.py  client.py  rag.py  stt.py  system_prompt.py  tts.py
